--- a/prj.conf
+++ b/prj.conf
@@ -9,6 +9,13 @@ CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
 CONFIG_SERIAL=y
 
+# Enable the I2C driver
+CONFIG_NRFX_TWI0=y
+CONFIG_I2C=y
+
+# Enable the PWM driver
+CONFIG_NRFX_PWM0=y
+
 CONFIG_GPIO=y
 
 CONFIG_HEAP_MEM_POOL_SIZE=2048
