--- a/prj.conf
+++ b/prj.conf
@@ -29,6 +29,7 @@ CONFIG_BT_MAX_PAIRED=1
 
 # Enable the NUS service
 CONFIG_BT_NUS=y
+CONFIG_BT_NUS_SECURITY_ENABLED=n
 
 # Enable bonding
 CONFIG_BT_SETTINGS=y
